# simpleRTC

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/infra/: event_driver.cpp  event_driver.h  logger.cpp  logger.h  socket_util.cpp  socket_util.h  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h
src/infra/utils/: semaphore.h  time.h  utils.h
